# SynergesticControl

./: README.md  pyproject.toml
sysIdent/: leastsquares.py
